[gd_scene load_steps=3 format=3 uid="uid://b7eqcpgmnjqf1"]

[ext_resource type="Script" path="res://scenes/combat/UI/combat/analyze_menu/analyze_menu.gd" id="1_ncpep"]
[ext_resource type="Texture2D" uid="uid://dr5sb1c7il8u3" path="res://icon.svg" id="2_e87m4"]

[node name="AnalyzeMenu" type="CanvasLayer"]
script = ExtResource("1_ncpep")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Analyze Menu"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 515)
layout_mode = 2
theme_override_constants/separation = 10

[node name="PanelImage" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(370, 515)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelImage"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelImage/MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelImage/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 350)
layout_mode = 2
texture = ExtResource("2_e87m4")

[node name="PanelInfo" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(732, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer"]
custom_minimum_size = Vector2(712, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(712, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Illnes' Name"

[node name="DataUnavailable" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Informatie Nedisponibila.
Pentru a accesa aceasta informatie, jucatorul este obligat sa trateze boala cel putin odata."

[node name="DataBox" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GeneralDescription" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer/ScrollContainer/VBoxContainer/DataBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(712, 0)
layout_mode = 2
text = "General Description
"
autowrap_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer/ScrollContainer/VBoxContainer/DataBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer/ScrollContainer/VBoxContainer/DataBox/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Manifestari Patologice"

[node name="Manifests" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer/ScrollContainer/VBoxContainer/DataBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(712, 0)
layout_mode = 2
autowrap_mode = 3

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer/ScrollContainer/VBoxContainer/DataBox"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer/ScrollContainer/VBoxContainer/DataBox/PanelContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Counter-uri Manifestarilor Patologice"

[node name="Counters" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PanelInfo/MarginContainer/ScrollContainer/VBoxContainer/DataBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(712, 0)
layout_mode = 2
autowrap_mode = 3

[node name="MarginContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(278, 0)
layout_mode = 2
text = "Back"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/Back" to="." method="_on_back_pressed"]
